# Lab04-2A202600572-Dinh_Nhat_Thanh

./: .env.example  .gitignore  AGENT.md  Instruction_Hiarchy.md  README.md  TODO.md  app.py  main.py  pyproject.toml  test_local_model.py
data/: flights.json
grade/: scoring.py
grade/output/: openai_gpt-oss-20b__best_practice_nha_trang__091fb2b6.json  openai_gpt-oss-20b__guardrail_violation__4b6e2385.json  openai_gpt-oss-20b__insufficient_phu_quoc__01198744.json  openai_gpt-oss-20b__normal_da_nang_5m__66a98785.json  openai_gpt-oss-20b__optimize_da_lat_4m__81d5b632.json  openai_gpt-oss-20b__vague_request__3536d437.json
prompts/instruction_hierarchy/: README.md  base_system.json  ih_system.txt  naive_system.txt  scenarios.json
src/agent/: graph.py
src/core/: ih_runner.py  llm.py
