[project]
name = "day04-promptengineering-toolcalling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chatollama>=0.2.13",
    "gguf>=0.19.0",
    "streamlit>=1.58.0",
    "torch>=2.12.0",
    "transformers>=5.9.0",
]
